spec/fixtures/modules/error/plans/run_fail.pp
plan error::run_fail(
  TargetSpec $targets
) {
 run_task('error::fail', $targets)
}
